name:                messing-about
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sirjenkins/messing_about#readme
license:             BSD3
license-file:        LICENSE
author:              Lee Ebreo
maintainer:          lebreo@gmail.com
copyright:           2017 Lee Ebreo
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Pathfinding
                     , Terrain
  build-depends:       base >= 4.7 && < 5
                     , hashable         >= 1.2.6.0
                     , mtl              >= 2.2.1
                     , psqueues         >= 0.2.2.3
                     , vector           >= 0.11.0.0

  default-language:    Haskell2010

executable messing-about-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , messing-about
  default-language:    Haskell2010

test-suite messing-about-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PathfindingSpec
  build-depends:       base
                     , hspec          >= 2.4.3
                     , messing-about
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sirjenkins/messing_about
